# second_gen_sgx_benchmark

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FindSGX.cmake
docker/: Dockerfile
microbenchmarks/: CMakeLists.txt
microbenchmarks/SharedHeaders/: CMakeLists.txt
microbenchmarks/SharedHeaders/include/: csvHelpers.h  sgxerrors.h
microbenchmarks/exp1_btree/: CMakeLists.txt  run_exp.sh
microbenchmarks/exp1_btree/App/: App.cpp
microbenchmarks/exp1_btree/Enclave/: Enclave.config.xml  Enclave.edl
microbenchmarks/exp2_numa/: CMakeLists.txt  defs.h  run_exp.sh
microbenchmarks/exp2_numa/App/: App.cpp  App_untrusted.cpp  config.cpp  config.h
microbenchmarks/exp2_numa/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
microbenchmarks/exp2_numa/plotting/: plot.r
microbenchmarks/exp3_paging/: CMakeLists.txt  run_exp.sh
microbenchmarks/exp3_paging/App/: App.cpp  config.cpp  config.h
microbenchmarks/exp3_paging/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
microbenchmarks/exp4a+7_olap/: CMakeLists.txt  run_exp.sh
microbenchmarks/exp4a+7_olap/App/: App.cpp  App_untrusted.cpp  config.cpp  config.h
microbenchmarks/exp4a+7_olap/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
microbenchmarks/exp4b_inout/: CMakeLists.txt  defs.h  run_exp.sh
microbenchmarks/exp4b_inout/App/: App.cpp  config.cpp  config.h
microbenchmarks/exp4b_inout/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  test.xml
microbenchmarks/exp5_ycsb/: CMakeLists.txt  Defs.hpp  run_exp.sh
microbenchmarks/exp5_ycsb/App/: App.cpp  App_untrusted.cpp  config.cpp  config.h
microbenchmarks/exp5_ycsb/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
microbenchmarks/exp6_io/: CMakeLists.txt  Defs.hpp  Helper.hpp  run_exp.sh
microbenchmarks/exp6_io/App/: App.cpp  App_untrusted.cpp  config.cpp  config.h
microbenchmarks/exp6_io/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
microbenchmarks/exp8_multienclave/: CMakeLists.txt  run_exp.sh  run_exp_separate.sh  run_exp_seq.sh
microbenchmarks/exp8_multienclave/App/: App.cpp  config.cpp  config.h
microbenchmarks/exp8_multienclave/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave_private.pem
microbenchmarks/perfevent-master/: CMakeLists.txt
microbenchmarks/perfevent-master/include/: PerfEvent.hpp
