set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -O3 -pthread")
set(EDL_SEARCH_PATHS Enclave)
set(E_SRCS Enclave/Enclave.cpp)
#makes no sense in this context, but can be useful in a real world example so that different configs can be used for debug/release
if(SGX_HW AND SGX_MODE STREQUAL "Release")
    set(LDS Enclave/Enclave.lds)
else()
    set(LDS Enclave/Enclave.lds)
endif()
add_enclave_library(ycsbenclave SRCS ${E_SRCS} EDL Enclave/Enclave.edl EDL_SEARCH_PATHS ${EDL_SEARCH_PATHS} LDSCRIPT ${LDS} USE_SGXSSL 1)
enclave_sign(ycsbenclave KEY Enclave/Enclave_private.pem CONFIG Enclave/Enclave.config.xml)

option(VTUNE "Enable VTUNE" 0)
set(SRCS App/App.cpp App/config.cpp)
add_untrusted_executable(ycsb SRCS ${SRCS} EDL Enclave/Enclave.edl EDL_SEARCH_PATHS ${EDL_SEARCH_PATHS})
target_compile_definitions(ycsb PRIVATE VTUNE=${VTUNE})
target_include_directories(ycsb PRIVATE ${SGX_INCLUDE_DIR})
target_link_libraries(ycsb  perfevent shared_headers gflags "libsgx_uprotected_fs.a")
add_dependencies(ycsb ycsbenclave-sign)

set(SRCS_UNTRUSTED App/App_untrusted.cpp App/config.cpp)
add_executable(ycsb_untrusted ${SRCS_UNTRUSTED})
set_target_properties(ycsb_untrusted PROPERTIES COMPILE_FLAGS ${APP_CXX_FLAGS})
target_link_libraries(ycsb_untrusted  perfevent gflags)
